# open_spiel

open_spiel/: spiel.h
open_spiel/algorithms/: CMakeLists.txt  mcts.cc  minimax.cc  minimax.h  stochastic_mcts.cc  stochastic_mcts.h  stochastic_mcts_test.cc  value_iteration.cc  value_iteration.h
open_spiel/algorithms/alpha_zero_torch/: alpha_zero.cc  model.h
open_spiel/algorithms/stochastic_alpha_zero_torch/: CMakeLists.txt  alpha_zero.cc  device_manager.h  model.cc  stochastic_model_test.cc  stochastic_vpnet_test.cc  vpevaluator.cc  vpevaluator.h  vpnet.cc  vpnet.h
open_spiel/examples/: CMakeLists.txt  alpha_zero_torch_game_example.cc  dqn_torch_example.cc  minimax_example.cc  value_iteration_example.cc
open_spiel/games/: CMakeLists.txt  pig.cc  pig.h  pig_test.cc  piglet.cc  piglet.h  piglet_test.cc  tiny_cant_stop.cc  tiny_cant_stop.h  tiny_cant_stop_test.cc
open_spiel/integration_tests/playthroughs/: misere(game=pig(players=3,horizon=20,winscore=6)).txt  pig_3p.txt  pig_4p.txt  pig_5p.txt  piglet.txt
open_spiel/python/tests/: pyspiel_test.py
open_spiel/scripts/: global_variables.sh
